Add UI Settings
Change-Id: Ic5e54d9f3d03d8dea5095c63c2bb05751f2e4187

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1580,6 +1580,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".katkiss.UISettings" />
+
         <receiver android:name=".widget.SettingsAppWidgetProvider"
                 android:label="@string/gadget_title"
                 android:exported="false"
