--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1581,6 +1581,7 @@
         </activity>
 
         <activity android:name=".katkiss.UISettings" />
+        <activity android:name=".katkiss.Performance" />
 
         <receiver android:name=".widget.SettingsAppWidgetProvider"
                 android:label="@string/gadget_title"
@@ -1609,6 +1610,12 @@
         <receiver android:name=".users.ProfileUpdateReceiver">
             <intent-filter>
                 <action android:name="android.provider.Contacts.PROFILE_CHANGED" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".katkiss.OverclockReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
