Add NavButtons LongPress Actions
Change-Id: I83f1ad630f5213a1c91ce95dd02392e2210d0852

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1582,6 +1582,7 @@
 
         <activity android:name=".katkiss.UISettings" />
         <activity android:name=".katkiss.Performance" />
+        <activity android:name=".katkiss.SoftKeyActions" />
 
         <receiver android:name=".widget.SettingsAppWidgetProvider"
                 android:label="@string/gadget_title"
