HDMI out mode chooser
Change-Id: I2f3975db282293a1ecbe19afaf8ef696d9f609d7

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1584,6 +1584,12 @@
         <activity android:name=".katkiss.Performance" />
         <activity android:name=".katkiss.SoftKeyActions" />
 
+        <activity android:name=".katkiss.HDMIReceiver" android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
         <receiver android:name=".widget.SettingsAppWidgetProvider"
                 android:label="@string/gadget_title"
                 android:exported="false"
