- DockSettings: Integrate into Settings right panel
 + Add PointerSpeed settings
 + Add KeyOverride Settings too

Change-Id: I75363cfd2ad7f0de60e6c430721a1f4ab94b6578

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1583,6 +1583,7 @@
         <activity android:name=".katkiss.UISettings" />
         <activity android:name=".katkiss.Performance" />
         <activity android:name=".katkiss.SoftKeyActions" />
+        <activity android:name=".katkiss.DockSettingsFragment" />
 
         <activity android:name=".katkiss.HDMIReceiver" android:launchMode="singleTop">
             <intent-filter>
